--- a/cocktails.html
+++ b/cocktails.html
@@ -22,26 +22,28 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="./images/cocktails/italian_zombie.png" alt="Italian Zombie" style="width:100%">
-        <h3 style="text-align:left">Italian Zombie</h3>
-        <p><i>Gosling's Black Seal rum, Hamilton jamaican pot still black rum, Campari, apricot liqueur, passionfruit syrup, pineapple juice, lime juice, absinthe, Angostura bitters</i></p>
+        <img src="./images/cocktails/zombie.webp" alt="Zombie" style="width:100%">
+        <h3 style="text-align:left">Zombie</h3>
+        <p><i>Hamilton's Zombie Blend, falernum, lime, grapefruit, cinammon, grenadine, absinthe, Angostura bitters</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/kaiteur_swizzle.jpg" alt="Kaiteur Swizzle" style="width:100%">
-        <h3 style="text-align:left">Kaiteur Swizzle</h3>
-        <p><i>Pusser's rum, falernum, lime juice, maple syrup, Angostura bitters</i></p>
+        <img src="./images/cocktails/western_sour.png" alt="Western Sour" style="width:100%">
+        <h3 style="text-align:left">Western Sour</h3>
+        <p><i>bourbon, falernum, grapefruit, lime, simple syrup</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/corn_n_oil.webp" alt="Corn n Oil" style="width:100%">
-        <h3 style="text-align:left">Corn 'n' Oil</h3>
-        <p><i>Gosling's Black Seal rum, falernum</i></p>
+        <img src="./images/cocktails/sundowner.png" alt="Sundowner" style="width:100%">
+        <h3 style="text-align:left">Sundowner</h3>
+        <p><i>Cognac, Cointreau, Galliano, lemon</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/hibiscus_rum_punch.JPG" alt="Hibiscus Rum Punch" style="width:100%">
-        <h3 style="text-align:left">Hibiscus Rum Punch</h3>
-        <p><i>Denizen Merchant's Reserve rum, Sorel, demerera syrup, lime juice, seltzer</i></p>
+        <img src="./images/cocktails/pisco_sour.webp" alt="Pisco Sour" style="width:100%">
+        <h3 style="text-align:left">Pisco Sour</h3>
+        <p><i>pisco, lime, simple syrup, egg white*</i></p>
       </div>
     </div>
+    <br>
+    <p>*optional, but recommended</p>
   </div>
   <hr width="100%">
 
