--- a/cocktails.html
+++ b/cocktails.html
@@ -22,24 +22,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="./images/cocktails/zombie.webp" alt="Zombie" style="width:100%">
-        <h3 style="text-align:left">Zombie</h3>
-        <p><i>Hamilton's Zombie Blend, falernum, lime, grapefruit, cinammon, grenadine, absinthe, Angostura bitters</i></p>
+        <img src="./images/cocktails/hurricane.png" alt="Hurricane" style="width:100%">
+        <h3 style="text-align:left">Hurricane</h3>
+        <p><i>Rum, passionfruit, orange, grenadine, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/western_sour.png" alt="Western Sour" style="width:100%">
-        <h3 style="text-align:left">Western Sour</h3>
-        <p><i>bourbon, falernum, grapefruit, lime, simple syrup</i></p>
+        <img src="./images/cocktails/division_bell.webp" alt="Division Bell" style="width:100%">
+        <h3 style="text-align:left">Division Bell</h3>
+        <p><i>mezcal, Aperol, maraschino liqueur, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/sundowner.png" alt="Sundowner" style="width:100%">
-        <h3 style="text-align:left">Sundowner</h3>
-        <p><i>Cognac, Cointreau, Galliano, lemon</i></p>
+        <img src="./images/cocktails/pina_colada.webp" alt="Piña Colada" style="width:100%">
+        <h3 style="text-align:left">Piña Colada</h3>
+        <p><i>Rum, cream of coconut, pineapple, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/pisco_sour.webp" alt="Pisco Sour" style="width:100%">
-        <h3 style="text-align:left">Pisco Sour</h3>
-        <p><i>pisco, lime, simple syrup, egg white*</i></p>
+        <img src="./images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
+        <h3 style="text-align:left">Pink Lady</h3>
+        <p><i>gin, lime, applejack, lemon, grenadine, egg white*</i></p>
       </div>
     </div>
     <br>
