Updated cocktail menu

--- a/cocktails.html
+++ b/cocktails.html
@@ -32,9 +32,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <p><i>mezcal, Aperol, maraschino liqueur, lime</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/pina_colada.webp" alt="Piña Colada" style="width:100%">
-        <h3 style="text-align:left">Piña Colada</h3>
-        <p><i>Rum, cream of coconut, pineapple, lime</i></p>
+        <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
+        <h3 style="text-align:left">Hibiscus Margarita</h3>
+        <p><i>Blanco tequila, Sorel, lime, agave syrup</i></p>
       </div>
       <div class="w3-quarter">
         <img src="./images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
