Created talks pages

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <a href="#papers" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text-o w3-margin-right"></i>PAPERS</a>
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-university w3-margin-right"></i>RESEARCH</a>
     <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-terminal w3-margin-right"></i>SOFTWARE</a> 
+    <a href="./talks.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-microphone w3-margin-right"></i>TALKS</a>
     <a href="./teaching.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-graduation-cap w3-margin-right"></i>TEACHING</a>
     <a href="./projects.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-pencil w3-margin-right"></i>PAST PROJECTS</a>
   </div>
