--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-terminal w3-margin-right"></i>SOFTWARE</a> 
     <a href="./talks.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-microphone w3-margin-right"></i>TALKS</a>
     <a href="./teaching.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-graduation-cap w3-margin-right"></i>TEACHING</a>
+    <a href="./travel.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-plane w3-margin-right"></i>TRAVEL</a>
     <a href="./projects.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-pencil w3-margin-right"></i>PAST PROJECTS</a>
   </div>
   <div class="w3-panel w3-large">
@@ -240,28 +241,35 @@
   <div class="w3-container w3-row-padding">
     <h4 id="software"><b>Software</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>MatrixSchubert</b></p>
         <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>CAAT</b></p>
         <p>A tool to help analyze course alignment.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/TheGrateSalmon/M2/tree/permutations" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Permutations</b></p>
+        <p>A Macaulay2 package implementing support for permutations (in progress).</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Minimal Out-Neighborhoods</b></p>
         <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Tropical Curves</b></p>
         <p>Python scripts for visualizing tropical curves.</p>
